[package]
name = "signaled"
version = "1.0.2"
edition = "2024"
description = "A lightweight reactive programming library for Rust, providing a signal-slot mechanism."
license = "MIT"
repository = "https://github.com/kralloie/signaled"
readme = "README.md"
keywords = ["reactive", "signals", "events", "state-management"]
categories = ["rust-patterns", "data-structures"]